--- a/src/Quiz.css
+++ b/src/Quiz.css
@@ -1,15 +1,21 @@
 /* Quiz */
 .container {
-  background-color: #E7FF05;
+  
+
+  background: repeating-linear-gradient(-45deg, #2b2f2d, #2b2f2d 4px, #2b2b2b 0, #2b2b2b 90px);
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 18px;
-  color:rgb(43, 41, 34);
+  color:rgb(239, 242, 245);
   text-align: center;
+
+  
 }
+
 
 h1,
 h2 {
@@ -18,7 +24,7 @@ h2 {
 
 .answer {
   border: 1.5px solid rgb(121, 114, 96);
-  background-color:rgb(240, 229, 198);
+  background-color:rgb(236, 236, 236);
   padding: 5px 10px 5px 45px;
   width: 50%;
   text-align: left;
@@ -26,8 +32,12 @@ h2 {
   position: relative;
   font-size: 22px;
   cursor: pointer;
-  color: rgb(31, 29, 24);
+  color: rgb(255, 255, 255);
   transition: ease-in-out, width 0.35s ease-in-out;
+}
+
+.answerText{
+  font-size: 60px;
 }
 
 .answer.selected {
@@ -57,7 +67,7 @@ h2 {
 }
 
 .letter {
-  color: rgb(31, 29, 24);
+  color: rgb(255, 255, 255);
   width: 30px;
   position: absolute;
   left: 0;
@@ -76,10 +86,9 @@ h2 {
   font-size: 25px;
   margin-top: 20px;
   cursor: pointer;
+  
 }
 
 .btn-primary {
   color:  #f4f4f4;
-  background-color: #331F83;
-  font-weight: bold;
 }
